# OpenSpace

./: .gitignore  README.md  package-lock.json  package.json  tsconfig.node.json  tsconfig.web.json  vite.config.ts
bridgespace-bundle/: EXTRACTED_RESOURCES.txt  index.html
bridgespace-bundle/assets/: AgentsPage-CWJgCA9f.js  CreateProjectModal-DZE9Qx9e.js  EditorPane-ClvhC1ZG.js  KanbanBoard-BHpy45A2.js  MainApp-CsQxt9Iy.js  MarkdownRenderer-DBBJFyxo.js  PromptsPage-DeL-hXx5.js  SettingsPage-C7gyz6SV.js  SimpleTerminalPane-Brvwg3Wo.js  WelcomeScreen-BqxlFsnG.js  chevron-left-BRK2ZYh3.js  circle-CaS7GgL4.js  circle-alert-DGt2vr4w.js  circle-x-BsZCwU-6.js  eye-DsInCY-v.js  folder-open-Bjr2Gydc.js  index-8QCuS6MZ.js  index-BEtR1dm1.js  index-BW7OmidL.css  index-BXhShb6L.js  index-BjdFrzXK.js  index-BkH016Fj.js  index-BwS7zW-T.js  index-CDtoH12O.js  index-CE0o88g6.js  index-COHhyq97.js  index-CbPc1vah.js  index-Cp4vpNc5.js  index-DR5qOcZT.js  index-Ds1H30bM.js  index-DsIECC2K.js  index-ISOjgh9a.js  index-RS-oi6U3.js  index-TEVa6pAP.js  index-mMcrL7_y.js  keyboard-Bs410ZuA.js  refresh-cw-Du5FK0wQ.js  rows-2-lhzUQW9r.js  tauriApiCompat-B2rHcT3S.js  terminal-CxvecJyb.js  (+7 more)
scripts/: openspace
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: main.rs
src/renderer/: index.html
src/renderer/src/: App.tsx  main.tsx
src/renderer/src/bridge/: openspace.ts  openspaceBridge.ts
src/renderer/src/data/: mockData.ts
src/renderer/src/styles/: bridge-space.css  openspace.css
src/shared/: global.d.ts  ipc.ts  tauri-bridge.ts
(+1 files in other folders)
