[package]
name = "openspace"
version = "0.1.0"
description = "Linux-first Tauri backend for OpenSpace"
authors = ["OpenSpace"]
edition = "2021"
rust-version = "1.77"

[build-dependencies]
tauri-build = { version = "2.0.0", features = [] }

[dependencies]
chrono = { version = "0.4", default-features = false, features = ["clock", "std"] }
portable-pty = "0.8"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tauri = { version = "2.0.0", features = [] }
tauri-plugin-dialog = "2.0.0-rc.8"
uuid = { version = "1.10", features = ["v4"] }
